--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,12 +19,17 @@ jobs:
         run: |
           echo "Installing Koyeb CLI..."
           # Download the CLI directly from Koyeb's official install script
-          curl -sSL https://www.koyeb.com/install.sh | sudo bash
-          # Verify installation
-          koyeb --version || { echo "Failed to install Koyeb CLI"; exit 1; }
+          curl -sSL https://www.koyeb.com/install.sh | bash
+          # Add to PATH for current session
+          export PATH="$HOME/.koyeb/bin:$PATH"
+          # Verify installation with full path
+          $HOME/.koyeb/bin/koyeb --version || { echo "Failed to verify Koyeb CLI"; exit 1; }
+          echo "Koyeb CLI installed successfully"
 
       - name: Authenticate and redeploy Koyeb service
         run: |
           echo "Redeploying service on Koyeb..."
-          koyeb service redeploy udehnih-a18 --app udehnih --token ${{ secrets.KOYEB_API_TOKEN }} || { echo "Deployment failed"; exit 1; }
+          # Add to PATH again for this step
+          export PATH="$HOME/.koyeb/bin:$PATH"
+          $HOME/.koyeb/bin/koyeb service redeploy udehnih-a18 --app udehnih --token ${{ secrets.KOYEB_API_TOKEN }} || { echo "Deployment failed"; exit 1; }
           echo "Deployment triggered successfully!"
