--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,8 @@ jobs:
       postgres:
         image: postgres:latest
         env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: udehnih
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
         ports:
           - 5432:5432
         options: >-
@@ -41,8 +40,8 @@ jobs:
       - name: Set up PostgreSQL JDBC connection
         run: |
           echo "spring.datasource.url=jdbc:postgresql://localhost:5432/udehnih" >> src/main/resources/application.properties
-          echo "spring.datasource.username=postgres" >> src/main/resources/application.properties
-          echo "spring.datasource.password=password" >> src/main/resources/application.properties
+          echo "DB_USERNAME=${{ secrets.DB_USERNAME }}" >> $GITHUB_ENV
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> $GITHUB_ENV
 
       - name: Run unit tests
         run: ./gradlew test
