fix: add credential database to env and add configuration database in ci.yml.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=udehnihh
 server.port=8080
-spring.datasource.url=jdbc:postgresql://ep-winter-thunder-a1pl0dbv-pooler.ap-southeast-1.aws.neon.tech/udehnihh?&sslmode=require
+spring.datasource.url=jdbc:postgresql://${DB_HOST}/${DB_NAME}?sslmode=require
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
