--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,14 +35,10 @@ jobs:
         run: chmod +x ./gradlew
       - name: Build and analyze
         env:
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD}}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         run: ./gradlew build sonar --info
-      - name: Show failed test output (if any)
-        if: failure()
-        run: |
-          echo "=== FAILED TEST REPORTS ==="
-          find build/reports/tests/test -name "*.html" || echo "No HTML test report found"
-          find build/reports/tests/test -name "*.xml" || echo "No XML test report found"
-          echo "=== LOG OUTPUT (tail) ==="
-          tail -n 100 build/reports/tests/test/*.xml || echo "No XML logs found"
