--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,69 @@
-name : Continuous Integration (CI)
+name: CI Pipeline
 
-on :
+on:
   push:
-  pull_request:
+    branches: [main, ci-cd]
 
 jobs:
-  test:
-    name: Run tests
-    runs-on: ubuntu-22.04
+  build:
+    name: Build and Analyze
+    runs-on: ubuntu-latest
     steps:
-      - name: Check out the Git repository
-        uses: actions/checkout@v4
-      - name: Set up Java toolchain
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
+        with:
+          java-version: 21
+          distribution: 'zulu'
+      - name: Grant execute permission
+        run: chmod +x ./gradlew
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: ~/.gradle/caches
+          key: gradle-cache
+          restore-keys: gradle-cache
+      - name: Run build and SonarCloud
+        env:
+          DB_NAME: ${{ secrets.DB_NAME }}
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        run: ./gradlew build sonar --info
+
+  test:
+    name: Run Unit Tests
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: "temurin"
           java-version: "21"
-          cache: "gradle"
-      - name: Add gradlew permission
-        run: chmod +x gradlew
-      - name: Run unit tests
-        run: ./gradlew test
+      - run: chmod +x gradlew
+      - name: Set up application.properties
+        run: |
+          echo "spring.datasource.url=jdbc:postgresql://ep-winter-thunder-xxxx.ap-southeast-1.aws.neon.tech/udehnihh?sslmode=require" > src/main/resources/application.properties
+          echo "spring.datasource.username=${{ secrets.DB_USERNAME }}" >> src/main/resources/application.properties
+          echo "spring.datasource.password=${{ secrets.DB_PASSWORD }}" >> src/main/resources/application.properties
+          echo "spring.datasource.driver-class-name=org.postgresql.Driver" >> src/main/resources/application.properties
+          echo "spring.jpa.hibernate.ddl-auto=update" >> src/main/resources/application.properties
+      - run: ./gradlew test
+
+  dependency-submission:
+    name: Submit Dependencies
+    runs-on: ubuntu-latest
+    needs: [build, test]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: temurin
+      - name: Submit dependencies
+        uses: gradle/actions/dependency-submission@v4
