--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,11 +2,12 @@ name: Deploying to Production
 
 on:
   workflow_run:
-    workflows: ["Build", "Continuous Integration (CI)", "Java CI with Gradle"]
+    workflows: ["CI Pipeline"]
     types:
       - completed
+
 jobs:
-  build-and-deploy:
+  deploy:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
@@ -26,7 +27,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPO_NAME }}:latest
 
-      - name: Releasing New Version
+      - name: Releasing New Version on AWS
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.SSH_HOST }}
