--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,9 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [main, ci-cd]
+    branches: ["**"]
+  pull_request:
+    branches: ["main"]
 
 jobs:
   build:
@@ -19,12 +21,18 @@ jobs:
           distribution: 'zulu'
       - name: Grant execute permission
         run: chmod +x ./gradlew
-      - name: Cache Gradle
+      - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
           path: ~/.gradle/caches
-          key: gradle-cache
-          restore-keys: gradle-cache
+          key: gradle-cache-${{ runner.os }}
+          restore-keys: gradle-cache-${{ runner.os }}
+      - name: Cache SonarQube packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
       - name: Run build and SonarCloud
         env:
           DB_NAME: ${{ secrets.DB_NAME }}
@@ -59,11 +67,13 @@ jobs:
     name: Submit Dependencies
     runs-on: ubuntu-latest
     needs: [build, test]
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
-          java-version: 17
-          distribution: temurin
-      - name: Submit dependencies
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Generate and submit dependency graph
         uses: gradle/actions/dependency-submission@v4
