--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -4,36 +4,41 @@ on:
   push:
     branches: ["**"]
   pull_request:
-    branches: ["main"]
+    branches: [main]
 
 jobs:
-  build:
-    name: Build and Analyze
+  build-and-analyze:
+    name: Build and Analyze (${{ github.ref_name }})
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: 21
-          distribution: 'zulu'
-      - name: Grant execute permission
+          distribution: 'temurin'
+
+      - name: Grant permission to gradlew
         run: chmod +x ./gradlew
+
       - name: Cache Gradle packages
         uses: actions/cache@v4
         with:
           path: ~/.gradle/caches
           key: gradle-cache-${{ runner.os }}
           restore-keys: gradle-cache-${{ runner.os }}
+
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-      - name: Run build and SonarCloud
+
+      - name: Build + Sonar + Jacoco
         env:
           DB_NAME: ${{ secrets.DB_NAME }}
           DB_HOST: ${{ secrets.DB_HOST }}
@@ -44,36 +49,44 @@ jobs:
         run: ./gradlew build sonar --info
 
   test:
-    name: Run Unit Tests
+    name: Unit Tests
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-and-analyze
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
-          distribution: "temurin"
-          java-version: "21"
+          java-version: 21
+          distribution: 'temurin'
+
       - run: chmod +x gradlew
-      - name: Set up application.properties
+
+      - name: Inject PostgreSQL config for test
         run: |
-          echo "spring.datasource.url=jdbc:postgresql://ep-winter-thunder-xxxx.ap-southeast-1.aws.neon.tech/udehnihh?sslmode=require" > src/main/resources/application.properties
-          echo "spring.datasource.username=${{ secrets.DB_USERNAME }}" >> src/main/resources/application.properties
-          echo "spring.datasource.password=${{ secrets.DB_PASSWORD }}" >> src/main/resources/application.properties
-          echo "spring.datasource.driver-class-name=org.postgresql.Driver" >> src/main/resources/application.properties
-          echo "spring.jpa.hibernate.ddl-auto=update" >> src/main/resources/application.properties
+          mkdir -p src/test/resources
+          echo "spring.datasource.url=jdbc:postgresql://${{ secrets.DB_HOST }}/${{ secrets.DB_NAME }}?sslmode=require" > src/test/resources/application.properties
+          echo "spring.datasource.username=${{ secrets.DB_USERNAME }}" >> src/test/resources/application.properties
+          echo "spring.datasource.password=${{ secrets.DB_PASSWORD }}" >> src/test/resources/application.properties
+          echo "spring.datasource.driver-class-name=org.postgresql.Driver" >> src/test/resources/application.properties
+          echo "spring.jpa.hibernate.ddl-auto=update" >> src/test/resources/application.properties
+          echo "spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect" >> src/test/resources/application.properties
+
       - run: ./gradlew test
 
-  dependency-submission:
+  dependencies:
     name: Submit Dependencies
     runs-on: ubuntu-latest
-    needs: [build, test]
+    needs: [build-and-analyze, test]
     permissions:
       contents: write
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
+
       - name: Generate and submit dependency graph
         uses: gradle/actions/dependency-submission@v4
