fix: modify deploy.yml.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,11 +50,20 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
+            echo "[🔁] Stopping & removing old container..."
             docker stop web_server || true
             docker rm web_server || true
-            docker rmi ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPO_NAME }}:latest || true
+
+            echo "[🧹] Removing dangling (unused) images & containers..."
+            docker system prune -af
+
+            echo "[🔐] Logging in to Docker Hub..."
             docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+            echo "[⬇️] Pulling latest image..."
             docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPO_NAME }}:latest
+
+            echo "[🚀] Starting new container..."
             docker run -d \
               --name=web_server \
               -p 8080:8080 \
