--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-
 name: Deploying to Production
 
 on:
@@ -6,7 +5,6 @@ on:
     workflows: ["CI Pipeline"]
     types:
       - completed
-
 jobs:
   build-and-deploy:
     if: >
@@ -17,20 +15,9 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-        with:
-          ref: ${{ github.event.workflow_run.head_sha }}
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: 21
-          distribution: 'temurin'
-
-      - name: Grant permission to gradlew
-        run: chmod +x ./gradlew
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
@@ -38,33 +25,22 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPO_NAME }}:latest
 
-      - name: Deploy to AWS EC2
+      - name: Releasing New Version
         uses: appleboy/ssh-action@v1.2.0
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_KEY }}
           script: |
-            echo "[🔁] Stopping & removing old container..."
-            docker stop web_server || true
-            docker rm web_server || true
-
-            echo "[🧹] Removing dangling (unused) images & containers..."
-            docker system prune -af
-
-            echo "[🔐] Logging in to Docker Hub..."
+            docker rmi $(docker images -a -q)
             docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-            echo "[⬇️] Pulling latest image..."
             docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPO_NAME }}:latest
-
-            echo "[🚀] Starting new container..."
+            source .env
             docker run -d \
-              --name=web_server \
-              -p 8080:8080 \
-              ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPO_NAME }}:latest
+            --name=web_server \
+            -p 8080:8080 \
+            -e ENV1="insert env var anda disini jika perlu" \
+            ${{ secrets.DOCKER_HUB_USERNAME }}/${{ secrets.DOCKER_HUB_REPO_NAME }}:latest
