--- a/monitoring/prometheus/prometheus.yml
+++ b/monitoring/prometheus/prometheus.yml
@@ -1,8 +1,8 @@
 scrape_configs:
-  - job_name: 'MyAppMetrics'
+  - job_name: 'Udehnih'
     metrics_path: '/actuator/prometheus'
     scrape_interval: 3s
     static_configs:
       - targets: ['host.docker.internal:8080']
         labels:
-          application: 'My Spring Boot Application'
+          application: 'Udehnih Application'
